fixing overflow style issue

--- a/app/addons/documents/assets/external/revision-tree.less
+++ b/app/addons/documents/assets/external/revision-tree.less
@@ -59,14 +59,10 @@
 	height: 100%
 }
 
-svg {
-	width: 100%;
-	height: 100%;
-}
-
 .visualizeRevTree {
 	width: 100%;
 	height: 100%;
+	overflow: scroll;
 }
 
 .outer-graph-area {
@@ -83,7 +79,6 @@ svg {
 .inner-graph-area {
 	width: 100%;
 	height: 100%;
-	overflow: scroll;
 }
 
 .legend {
